# rust-hello-lambda

./: Cargo.toml
src/: main.rs
